# testrepo2

./: .env.example  README.md  creatio_crm_crew.env.example  pyproject.toml  requirements.txt
creatio_crm_crew/: README.md  __init__.py  cli.py  crew.py  main.py
creatio_crm_crew/agents/: __init__.py  data_architect_agent.py  metrics_expert_agent.py  query_builder_agent.py  schema_analyst_agent.py
creatio_crm_crew/config/: __init__.py  settings.py
creatio_crm_crew/tasks/: __init__.py  documentation_tasks.py  metrics_tasks.py  query_tasks.py  schema_tasks.py
creatio_crm_crew/tools/: __init__.py  documentation_tools.py  metrics_tools.py  query_tools.py  schema_tools.py
devlifecycle_crew/: __init__.py  cli.py  crew.py  main.py
devlifecycle_crew.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
devlifecycle_crew/agents/: __init__.py  intake_agent.py  planning_agent.py  quality_agent.py  requirements_agent.py  sdlc_manager_agent.py
devlifecycle_crew/config/: __init__.py  settings.py
devlifecycle_crew/tasks/: __init__.py  intake_tasks.py  planning_tasks.py  quality_tasks.py  requirements_tasks.py  sdlc_tasks.py
devlifecycle_crew/tools/: __init__.py  requirements_tools.py  sdlc_tools.py  ticket_tools.py
examples/: creatio_crm_examples.py  creatio_sample_questions.txt  sample_backlog.txt  sample_project_status.txt  sample_requirements.txt  sample_ticket.txt
tests/: __init__.py  test_agents.py  test_creatio_crm_crew.py  test_crew.py  test_tools.py
