[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devlifecycle-crew"
version = "0.1.0"
description = "AI-powered agent system for managing software development lifecycle using CrewAI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DevLifecycle Team", email = "team@example.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = [
    "crewai",
    "agents",
    "ai",
    "sdlc",
    "project-management",
    "requirements",
    "tickets",
    "automation",
]
dependencies = [
    "crewai>=0.86.0",
    "crewai-tools>=0.17.0",
    "openai>=1.57.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "requests>=2.32.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.7.0",
]
database = [
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
devlifecycle = "devlifecycle_crew.cli:main"
dlc = "devlifecycle_crew.cli:main"
creatio-crm = "creatio_crm_crew.cli:main"
ccrm = "creatio_crm_crew.cli:main"

[project.urls]
Homepage = "https://github.com/example/devlifecycle-crew"
Documentation = "https://github.com/example/devlifecycle-crew#readme"
Repository = "https://github.com/example/devlifecycle-crew"
Issues = "https://github.com/example/devlifecycle-crew/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["devlifecycle_crew*", "creatio_crm_crew*"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["devlifecycle_crew"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
